--- a/{{cookiecutter.projectName}}-ios/bitrise.yml
+++ b/{{cookiecutter.projectName}}-ios/bitrise.yml
@@ -102,5 +102,5 @@ app:
   - BITRISE_SCHEME_STAGING: {{cookiecutter.projectName}} - Staging
   - AAA_INFO_PLIST_PATH: "$BITRISE_SOURCE_DIR/{{cookiecutter.projectName}}/SupportingFiles/Info.plist"
   - AAA_APP_BUNDLE_ID: {{cookiecutter.bundleIdentifierPrefix}}.{{cookiecutter.bundleIdentifier}}
-  - AAA_ITUNES_TEAM: {{cookiecutter.itunesTeam}}
-  - AAA_DEV_TEAM_ID: {{cookiecutter.team}}
+  - AAA_ITUNES_TEAM: {{cookiecutter.teamName}}
+  - AAA_DEV_TEAM_ID: {{cookiecutter.teamId}}
