updated project.yml to support Xcode 10.2, Swift 5.0

--- a/{{cookiecutter.projectDirectory}}/project.yml
+++ b/{{cookiecutter.projectDirectory}}/project.yml
@@ -1,7 +1,10 @@
 name: {{cookiecutter.projectName}}
+options:
+  xcodeVersion: 10.2
 settings:
   base:
     DEVELOPMENT_TEAM: {{cookiecutter.teamId}}
+    SWIFT_VERSION: "5.0"
   configs:
     Release:
       SWIFT_COMPILATION_MODE: wholemodule
