--- a/{{cookiecutter.projectDirectory}}/project.yml
+++ b/{{cookiecutter.projectDirectory}}/project.yml
@@ -1,13 +1,17 @@
 name: {{cookiecutter.projectName}}
 options:
   xcodeVersion: 10.2
+configs:
+  Debug-live: debug
+  Debug-dev: debug
+  Debug-staging: debug
+  Release-live: release
+  Release-dev: release
+  Release-staging: release
 settings:
   base:
     DEVELOPMENT_TEAM: {{cookiecutter.teamId}}
     SWIFT_VERSION: "5.0"
-  configs:
-    Release:
-      SWIFT_COMPILATION_MODE: wholemodule
 attributes:
   ORGANIZATIONNAME: aaa - all about apps GmbH
 targets:
@@ -15,11 +19,34 @@ targets:
     type: application
     platform: iOS
     deploymentTarget: "{{cookiecutter.deploymentTarget}}"
+    scheme:
+      configVariants:
+        - live
+        - dev
+        - staging
     settings:
-      PRODUCT_BUNDLE_IDENTIFIER: {{cookiecutter.bundleIdentifier}}
+      base:
+        PRODUCT_BUNDLE_IDENTIFIER: {{cookiecutter.bundleIdentifier}}$(BUILD_VERION_SUFFIX)
+      configs:
+        Debug-live:
+          BUILD_VERION_SUFFIX: ""
+        Debug-dev:
+          BUILD_VERION_SUFFIX: "-dev"
+        Debug-staging:
+          BUILD_VERION_SUFFIX: "-staging"
+        Release-live:
+          BUILD_VERION_SUFFIX: ""
+          SWIFT_COMPILATION_MODE: wholemodule
+        Release-dev:
+          BUILD_VERION_SUFFIX: "-dev"
+          SWIFT_COMPILATION_MODE: wholemodule
+        Release-staging:
+          BUILD_VERION_SUFFIX: "-staging"
+          SWIFT_COMPILATION_MODE: wholemodule
     info:
       path: {{cookiecutter.projectName}}/SupportingFiles/Info.plist
       properties:
+        CFBundleDisplayName: {{cookiecutter.projectName}}$(BUILD_VERION_SUFFIX)
         UISupportedInterfaceOrientations:
           - UIInterfaceOrientationPortrait
           - UIInterfaceOrientationLandscapeLeft
