add Copy GoogleService-Info build script (commented)

--- a/{{cookiecutter.projectDirectory}}/project.yml
+++ b/{{cookiecutter.projectDirectory}}/project.yml
@@ -79,6 +79,22 @@ targets:
                   echo "warning: SwiftLint not installed, download from https://github.com/realm/SwiftLint"
                 fi
         name: SwiftLint
+      - script: |
+          #case "${CONFIGURATION}" in
+          #
+          #"Debug-dev" | "Release-dev" )
+          #cp -r "${PROJECT_DIR}/GoogleService-Info-Dev.plist" "${BUILT_PRODUCTS_DIR}/${PRODUCT_NAME}.app/GoogleService-Info.plist" ;;
+          #
+          #"Debug-staging" | "Release-staging" )
+          #cp -r "${PROJECT_DIR}/GoogleService-Info-Staging.plist" "${BUILT_PRODUCTS_DIR}/${PRODUCT_NAME}.app/GoogleService-Info.plist" ;;
+          #
+          #"Debug-live" | "Release-live" )
+          #cp -r "${PROJECT_DIR}/GoogleService-Info-Release.plist" "${BUILT_PRODUCTS_DIR}/${PRODUCT_NAME}.app/GoogleService-Info.plist" ;;
+          #
+          #*)
+          #;;
+          #esac
+        name: Copy GoogleService-Info
   {{cookiecutter.projectName}}Kit:
     type: framework
     platform: iOS
