--- a/{{cookiecutter.projectDirectory}}/.swiftlint.yml
+++ b/{{cookiecutter.projectDirectory}}/.swiftlint.yml
@@ -14,6 +14,7 @@ disabled_rules:
     - force_cast
     - superfluous_disable_command
     - variable_name
+    - weak_delegate
     #- operator_whitespace
     #- vertical_whitespace
     #- function_parameter_count
