added StatefulViewController framework

--- a/{{cookiecutter.projectDirectory}}/project.yml
+++ b/{{cookiecutter.projectDirectory}}/project.yml
@@ -80,6 +80,7 @@ targets:
       - carthage: ReactiveCocoa
       - carthage: ReactiveSwift
       - carthage: SimpleButton
+      - carthage: StatefulViewController
     postCompileScripts:
       - script: |
                 if which swiftlint >/dev/null; then
