--- a/{{cookiecutter.projectDirectory}}/project.yml
+++ b/{{cookiecutter.projectDirectory}}/project.yml
@@ -83,12 +83,27 @@ targets:
       - carthage: StatefulViewController
     postCompileScripts:
       - script: |
-                if which swiftlint >/dev/null; then
-                  swiftlint
-                else
-                  echo "warning: SwiftLint not installed, download from https://github.com/realm/SwiftLint"
-                fi
+          if which swiftlint >/dev/null; then
+            swiftlint
+          else
+            echo "warning: SwiftLint not installed, download from https://github.com/realm/SwiftLint"
+          fi
         name: SwiftLint
+      - script: |
+          if which /usr/libexec/PlistBuddy >/dev/null; then
+            version=$(/usr/libexec/PlistBuddy -c "Print CFBundleShortVersionString" "${INFOPLIST_FILE}")
+            build=$(/usr/libexec/PlistBuddy -c "Print CFBundleVersion" "${INFOPLIST_FILE}")
+            /usr/libexec/PlistBuddy "$SRCROOT/$PRODUCT_NAME/SupportingFiles/Settings.bundle/Root.plist" -c "set PreferenceSpecifiers:2:DefaultValue $version ($build)"
+          else
+          echo "warning: PlistBuddy not found"
+          fi
+  
+          if which /usr/local/bin/license-plist >/dev/null; then
+            /usr/local/bin/license-plist --output-path $PRODUCT_NAME/SupportingFiles/Settings.bundle --config-path $PRODUCT_NAME/SupportingFiles/license_plist.yml --suppress-opening-directory
+          else
+            echo "warning: license-plist not installed, download from https://github.com/mono0926/LicensePlist"
+          fi
+        name: Generate Licenses
       - script: |
           #case "${CONFIGURATION}" in
           #
