fixed license-plist script with path to Package.swift

--- a/{{cookiecutter.projectDirectory}}/project.yml
+++ b/{{cookiecutter.projectDirectory}}/project.yml
@@ -124,7 +124,7 @@ targets:
           fi
   
           if which /usr/local/bin/license-plist >/dev/null; then
-            /usr/local/bin/license-plist --output-path $PRODUCT_NAME/SupportingFiles/Settings.bundle --config-path $PRODUCT_NAME/SupportingFiles/license_plist.yml --suppress-opening-directory
+            /usr/local/bin/license-plist --output-path $PRODUCT_NAME/SupportingFiles/Settings.bundle --config-path $PRODUCT_NAME/SupportingFiles/license_plist.yml --package-path $PROJECT_FILE_PATH/project.xcworkspace/xcshareddata/swiftpm/Package.swift --suppress-opening-directory
           else
             echo "warning: license-plist not installed, download from https://github.com/mono0926/LicensePlist"
           fi
