--- a/{{cookiecutter.projectDirectory}}/{{cookiecutter.projectName}}/SupportingFiles/Staging.xcconfig
+++ b/{{cookiecutter.projectDirectory}}/{{cookiecutter.projectName}}/SupportingFiles/Staging.xcconfig
@@ -1,2 +1,3 @@
 PRODUCT_BUNDLE_IDENTIFIER = {{cookiecutter.bundleIdentifier}}-staging
+SERVER_ENVIRONMENT = staging
 SERVER_ENVIRONMENT_SUFFIX = -staging
