--- a/{{cookiecutter.projectDirectory}}/bitrise.yml
+++ b/{{cookiecutter.projectDirectory}}/bitrise.yml
@@ -109,6 +109,17 @@ workflows:
     - _teardown
   dev:
     steps:
+    - script:
+        title: Setup Dev
+        inputs:
+        - content: |-
+            #!/usr/bin/env bash
+            # fail if any commands fails
+            set -e
+            # debug log
+            set -x
+
+            bash ./scripts/setup_dev
     - ios-auto-provision:
         inputs:
         - team_id: "$AAA_DEV_TEAM_ID"
