--- a/{{cookiecutter.projectDirectory}}/bitrise.yml
+++ b/{{cookiecutter.projectDirectory}}/bitrise.yml
@@ -152,9 +152,7 @@ workflows:
         - script_url: https://public.allaboutapps.at/bitrise/kickstart.sh
     - activate-ssh-key:
         {% raw %}run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'{% endraw %}
-    - git-clone:
-        inputs:
-        - clone_depth: '1'
+    - git-clone: {}
     - cache-pull: {}
     - brew-install:
         inputs:
