--- a/{{cookiecutter.projectDirectory}}/bitrise.yml
+++ b/{{cookiecutter.projectDirectory}}/bitrise.yml
@@ -152,7 +152,9 @@ workflows:
         - script_url: https://public.allaboutapps.at/bitrise/kickstart.sh
     - activate-ssh-key:
         {% raw %}run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'{% endraw %}
-    - git-clone: {}
+    - git-clone:
+        inputs:
+        - clone_depth: '1'
     - cache-pull: {}
     - brew-install:
         inputs:
@@ -167,10 +169,13 @@ workflows:
         - packages: swiftlint
         title: 'Brew install: SwiftLint'
     - cache-push: {}
+    - remote-script-runner:
+        inputs:
+        - script_url: 'https://public.allaboutapps.at/bitrise/ios-last-commit-date.sh'
     - set-xcode-build-number:
         inputs:
         - build_version_offset: ''
-        - build_version: "$GIT_CLONE_COMMIT_COUNT"
+        - build_version: "$AAA_LAST_COMMIT_DATE"
         - plist_path: "$AAA_INFO_PLIST_PATH"
   _teardown:
     steps:
