removed copy of config file as pre-action -> now using multiple build configs

--- a/{{cookiecutter.projectDirectory}}/{{cookiecutter.projectName}}/SupportingFiles/Configurations/Dev.xcconfig
+++ b/{{cookiecutter.projectDirectory}}/{{cookiecutter.projectName}}/SupportingFiles/Configurations/Dev.xcconfig
@@ -1,3 +1,4 @@
 PRODUCT_BUNDLE_IDENTIFIER = {{cookiecutter.bundleIdentifier}}-dev
 SERVER_ENVIRONMENT = dev
 SERVER_ENVIRONMENT_SUFFIX = -dev
+APP_NAME_SUFFIX = -Dev
