--- a/{{cookiecutter.projectDirectory}}/{{cookiecutter.projectName}}/SupportingFiles/Configurations/Live.xcconfig
+++ b/{{cookiecutter.projectDirectory}}/{{cookiecutter.projectName}}/SupportingFiles/Configurations/Live.xcconfig
@@ -1,3 +1,4 @@
 PRODUCT_BUNDLE_IDENTIFIER = {{cookiecutter.bundleIdentifier}}
 SERVER_ENVIRONMENT = live
 SERVER_ENVIRONMENT_SUFFIX = 
+APP_NAME_SUFFIX = 
