--- a/{{cookiecutter.projectDirectory}}/{{cookiecutter.projectName}}/SupportingFiles/Configurations/Staging.xcconfig
+++ b/{{cookiecutter.projectDirectory}}/{{cookiecutter.projectName}}/SupportingFiles/Configurations/Staging.xcconfig
@@ -1,3 +1,4 @@
 PRODUCT_BUNDLE_IDENTIFIER = {{cookiecutter.bundleIdentifier}}-staging
 SERVER_ENVIRONMENT = staging
 SERVER_ENVIRONMENT_SUFFIX = -staging
+APP_NAME_SUFFIX = -Staging
