--- a/{{cookiecutter.projectDirectory}}/bitrise.yml
+++ b/{{cookiecutter.projectDirectory}}/bitrise.yml
@@ -1,29 +1,18 @@
 ---
-format_version: '4'
+format_version: '8'
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 project_type: ios
 trigger_map:
-- push_branch: master
-  workflow: master
+- push_branch: main
+  workflow: main
 - push_branch: testflight
   workflow: testflight
 - pull_request_source_branch: "*"
-  workflow: master
-  pull_request_target_branch: master
+  workflow: main
+  pull_request_target_branch: main
 workflows:
-  master:
+  main:
     steps:
-    - script:
-        title: Setup Staging
-        inputs:
-        - content: |-
-            #!/usr/bin/env bash
-            # fail if any commands fails
-            set -e
-            # debug log
-            set -x
-
-            bash ./scripts/setup_staging
     - ios-auto-provision:
         inputs:
         - team_id: "$AAA_DEV_TEAM_ID"
@@ -37,17 +26,6 @@ workflows:
         - is_clean_build: 'yes'
         - scheme: "$BITRISE_SCHEME_STAGING"
         title: Staging - Xcode Archive & Export
-    - script:
-        title: Setup Live
-        inputs:
-        - content: |-
-            #!/usr/bin/env bash
-            # fail if any commands fails
-            set -e
-            # debug log
-            set -x
-
-            bash ./scripts/setup_live
     - ios-auto-provision:
         inputs:
         - team_id: "$AAA_DEV_TEAM_ID"
@@ -69,21 +47,8 @@ workflows:
         title: Push Version Tag
     before_run:
     - _kickstart
-    after_run:
-    - _teardown
   testflight:
     steps:
-    - script:
-        title: Setup Live
-        inputs:
-        - content: |-
-            #!/usr/bin/env bash
-            # fail if any commands fails
-            set -e
-            # debug log
-            set -x
-
-            bash ./scripts/setup_live
     - ios-auto-provision:
         inputs:
         - team_id: "$AAA_DEV_TEAM_ID"
@@ -105,21 +70,8 @@ workflows:
         title: Push Version Tag
     before_run:
     - _kickstart
-    after_run:
-    - _teardown
   dev:
     steps:
-    - script:
-        title: Setup Dev
-        inputs:
-        - content: |-
-            #!/usr/bin/env bash
-            # fail if any commands fails
-            set -e
-            # debug log
-            set -x
-
-            bash ./scripts/setup_dev
     - ios-auto-provision:
         inputs:
         - team_id: "$AAA_DEV_TEAM_ID"
@@ -141,16 +93,8 @@ workflows:
         title: Push Version Tag
     before_run:
     - _kickstart
-    after_run:
-    - _teardown
   _kickstart:
     steps:
-    - remote-script-runner:
-        title: aaa kickstart
-        inputs:
-        - script_url: https://public.allaboutapps.at/bitrise/kickstart.sh
-    - activate-ssh-key:
-        {% raw %}run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'{% endraw %}
     - git-clone:
         inputs:
         - clone_depth: '1'
@@ -176,19 +120,12 @@ workflows:
         - build_version_offset: ''
         - build_version: "$AAA_LAST_COMMIT_DATE"
         - plist_path: "$AAA_INFO_PLIST_PATH"
-  _teardown:
-    steps:
-    - remote-script-runner:
-        inputs:
-        - script_url: https://public.allaboutapps.at/bitrise/teardown.sh
-        title: aaa teardown
-        is_always_run: true
 app:
   envs:
   - BITRISE_PROJECT_PATH: {{cookiecutter.projectName}}.xcodeproj
-  - BITRISE_SCHEME_LIVE: {{cookiecutter.projectName}} live
-  - BITRISE_SCHEME_DEV: {{cookiecutter.projectName}} dev
-  - BITRISE_SCHEME_STAGING: {{cookiecutter.projectName}} staging
+  - BITRISE_SCHEME_LIVE: {{cookiecutter.projectName}} Live
+  - BITRISE_SCHEME_DEV: {{cookiecutter.projectName}} Dev
+  - BITRISE_SCHEME_STAGING: {{cookiecutter.projectName}} Staging
   - AAA_INFO_PLIST_PATH: "$BITRISE_SOURCE_DIR/{{cookiecutter.projectName}}/SupportingFiles/Info.plist"
   - AAA_APP_BUNDLE_ID_LIVE: {{cookiecutter.bundleIdentifier}}
   - AAA_APP_BUNDLE_ID_DEV: {{cookiecutter.bundleIdentifier}}-dev
