--- a/{{cookiecutter.projectDirectory}}/bitrise.yml
+++ b/{{cookiecutter.projectDirectory}}/bitrise.yml
@@ -13,17 +13,6 @@ trigger_map:
 workflows:
   master:
     steps:
-    - script:
-        title: Setup Staging
-        inputs:
-        - content: |-
-            #!/usr/bin/env bash
-            # fail if any commands fails
-            set -e
-            # debug log
-            set -x
-
-            bash ./scripts/setup_staging
     - ios-auto-provision:
         inputs:
         - team_id: "$AAA_DEV_TEAM_ID"
@@ -37,17 +26,6 @@ workflows:
         - is_clean_build: 'yes'
         - scheme: "$BITRISE_SCHEME_STAGING"
         title: Staging - Xcode Archive & Export
-    - script:
-        title: Setup Live
-        inputs:
-        - content: |-
-            #!/usr/bin/env bash
-            # fail if any commands fails
-            set -e
-            # debug log
-            set -x
-
-            bash ./scripts/setup_live
     - ios-auto-provision:
         inputs:
         - team_id: "$AAA_DEV_TEAM_ID"
@@ -73,17 +51,6 @@ workflows:
     - _teardown
   testflight:
     steps:
-    - script:
-        title: Setup Live
-        inputs:
-        - content: |-
-            #!/usr/bin/env bash
-            # fail if any commands fails
-            set -e
-            # debug log
-            set -x
-
-            bash ./scripts/setup_live
     - ios-auto-provision:
         inputs:
         - team_id: "$AAA_DEV_TEAM_ID"
@@ -109,17 +76,6 @@ workflows:
     - _teardown
   dev:
     steps:
-    - script:
-        title: Setup Dev
-        inputs:
-        - content: |-
-            #!/usr/bin/env bash
-            # fail if any commands fails
-            set -e
-            # debug log
-            set -x
-
-            bash ./scripts/setup_dev
     - ios-auto-provision:
         inputs:
         - team_id: "$AAA_DEV_TEAM_ID"
@@ -186,9 +142,9 @@ workflows:
 app:
   envs:
   - BITRISE_PROJECT_PATH: {{cookiecutter.projectName}}.xcodeproj
-  - BITRISE_SCHEME_LIVE: {{cookiecutter.projectName}} live
-  - BITRISE_SCHEME_DEV: {{cookiecutter.projectName}} dev
-  - BITRISE_SCHEME_STAGING: {{cookiecutter.projectName}} staging
+  - BITRISE_SCHEME_LIVE: {{cookiecutter.projectName}} Live
+  - BITRISE_SCHEME_DEV: {{cookiecutter.projectName}} Dev
+  - BITRISE_SCHEME_STAGING: {{cookiecutter.projectName}} Staging
   - AAA_INFO_PLIST_PATH: "$BITRISE_SOURCE_DIR/{{cookiecutter.projectName}}/SupportingFiles/Info.plist"
   - AAA_APP_BUNDLE_ID_LIVE: {{cookiecutter.bundleIdentifier}}
   - AAA_APP_BUNDLE_ID_DEV: {{cookiecutter.bundleIdentifier}}-dev
